v3.9.11 (XXXX-X-XX)
--------------------

* ES-1566: fix an issue when trying to restrict traversals to non-existing
  collections with the `edgeCollections` traversal option.
  
  If a non-existing collection is specified in the `edgeCollections` or
  `vertexCollections` options of an AQL traversal, the query will now fail with
  a `collection or view not found` error. Also, if wrong collection types are
  used (e.g. a document collection or a view for `edgeCollections`), then an
  error is raised about an invalid collection type being used.

  This is a behavior change compared to previous versions, which ignored
  specifying non-existing vertex collections and had undefined behavior when
  specifying non-existing edge collections or using a vertex collection instead
  of an edge collection.

* Reduce memory usage for incremental sync replication.

  The incremental sync protocol that was used for collections created with 3.8
  or higher had memory usage issues in case the follower already had some local
  data and its dataset was much larger than the leader's. For example, this can
  happen if a follower gets disconnected, then a lot of document removals happen
  on the leader and afterwards the follower tries to get back into sync.

  In this case, the follower buffered the ids of documents it had to remove
  locally in a vector, which could grow arbitrarily large. The removal of the
  documents contained in this vector would only happen at the end, potentially
  even without performing intermediate commits.

  The change in this PR is to trigger the document removal earlier, once the
  vector has reached some size threshold, and also to use intermediate commits
  during the removals.

* BTS-1181: fix a data race on the collection list in TransactionState.
  This race could happen in the cluster when a collection is sharded by a
  different attribute than `_key` and a document lookup by _key is performed.